Added minor functions and fix errors
